blurred fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,10 +16,11 @@
   object-position: top;
   opacity: 0.7;
   z-index: 0;
-  transition: all 0.5s ease;
+  transition: filter 0.5s ease, transform 0.5s ease;
+  transform: translate3d(0, 0, 0);
 
   &.blurred {
-    scale: 1.1;
+    transform: scale(1.1);
     filter: blur(7px);
   }
 }
